--- a/development/scss/style.scss
+++ b/development/scss/style.scss
@@ -64,10 +64,6 @@ body {
   flex-direction: column;
 }
 
-.side-content {
-  flex: 0 0 30%;
-}
-
 .main-content {
   flex: 0 0 40%;
   margin-top: 2rem !important;
@@ -88,37 +84,10 @@ h2 {
   color: rgba(0,0,0,.75);
 }
 
-/*EDUCATION*/
-.card {
-  display: flex;
-  flex-direction: column;
-  background-color: white;
-  border: 1px solid rgba(0,0,0,.125);
-  border-radius: .25rem;
-  margin-bottom: 30px;
-}
-
-.card-header {
-  padding: .75rem 1.25rem;
-  background-color: white;
-  border-bottom: 1px solid rgba(0,0,0,.075);
-  border-top-left-radius: .25rem;
-  border-top-right-radius: .25rem;
-}
-
-.card-content {
-  padding: .25rem 1.25rem;
-  flex: 1 1 auto;
-}
-
 h4 {
   margin: 0;
   font-weight: 400;
   color: grey;
-}
-
-.job-title {
-  float: right;
 }
 
 /*PROJECTS*/
@@ -448,3 +417,140 @@ a{
   display: none;
   margin: 120px 0px,
 }
+
+img {
+  opacity: 1;
+  transition: opacity 0.3s;
+}
+
+img[data-src] {
+  opacity: 0;
+}
+
+/* emoijis */
+.em,.em-svg {
+    height: 1.5em;
+    width: 1.5em;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    display: inline-block;
+    vertical-align: middle
+}
+
+.em-movie_camera {
+    background-image: url("https://twemoji.maxcdn.com/2/72x72/1f3a5.png")
+}
+
+.em-movie_camera.em-svg {
+    background: url("https://twemoji.maxcdn.com/2/72x72/1f3a5.png");
+    background-image: url("https://twemoji.maxcdn.com/2/svg/1f3a5.svg"),none
+}
+
+.em-hot_pepper {
+    background-image: url("https://twemoji.maxcdn.com/2/72x72/1f336.png")
+}
+
+.em-hot_pepper.em-svg {
+    background: url("https://twemoji.maxcdn.com/2/72x72/1f336.png");
+    background-image: url("https://twemoji.maxcdn.com/2/svg/1f336.svg"),none
+}
+
+.em-computer {
+    background-image: url("https://twemoji.maxcdn.com/2/72x72/1f4bb.png")
+}
+
+.em-computer.em-svg {
+    background: url("https://twemoji.maxcdn.com/2/72x72/1f4bb.png");
+    background-image: url("https://twemoji.maxcdn.com/2/svg/1f4bb.svg"),none
+}
+
+.em-earth_asia {
+    background-image: url("https://twemoji.maxcdn.com/2/72x72/1f30f.png")
+}
+
+.em-earth_asia.em-svg {
+    background: url("https://twemoji.maxcdn.com/2/72x72/1f30f.png");
+    background-image: url("https://twemoji.maxcdn.com/2/svg/1f30f.svg"),none
+}
+
+.em-beer {
+    background-image: url("https://twemoji.maxcdn.com/2/72x72/1f37a.png")
+}
+
+.em-beer.em-svg {
+    background: url("https://twemoji.maxcdn.com/2/72x72/1f37a.png");
+    background-image: url("https://twemoji.maxcdn.com/2/svg/1f37a.svg"),none
+}
+
+.em-grinning {
+    background-image: url("https://twemoji.maxcdn.com/2/72x72/1f600.png")
+}
+
+.em-grinning.em-svg {
+    background: url("https://twemoji.maxcdn.com/2/72x72/1f600.png");
+    background-image: url("https://twemoji.maxcdn.com/2/svg/1f600.svg"),none
+}
+
+.em-clap {
+    background-image: url("https://twemoji.maxcdn.com/2/72x72/1f44f.png")
+}
+
+.em-clap.em-svg {
+    background: url("https://twemoji.maxcdn.com/2/72x72/1f44f.png");
+    background-image: url("https://twemoji.maxcdn.com/2/svg/1f44f.svg"),none
+}
+
+.em-brain {
+    background-image: url("https://twemoji.maxcdn.com/2/72x72/1f9e0.png")
+}
+
+.em-brain.em-svg {
+    background: url("https://twemoji.maxcdn.com/2/72x72/1f9e0.png");
+    background-image: url("https://twemoji.maxcdn.com/2/svg/1f9e0.svg"),none
+}
+
+.em-rocket {
+    background-image: url("https://twemoji.maxcdn.com/2/72x72/1f680.png")
+}
+
+.em-rocket.em-svg {
+    background: url("https://twemoji.maxcdn.com/2/72x72/1f680.png");
+    background-image: url("https://twemoji.maxcdn.com/2/svg/1f680.svg"),none
+}
+.em-trophy {
+    background-image: url("https://twemoji.maxcdn.com/2/72x72/1f3c6.png")
+}
+
+.em-trophy.em-svg {
+    background: url("https://twemoji.maxcdn.com/2/72x72/1f3c6.png");
+    background-image: url("https://twemoji.maxcdn.com/2/svg/1f3c6.svg"),none
+}
+
+
+/* font awesome */
+.fa {
+    display: inline-block;
+    font: normal normal normal 14px/1 FontAwesome;
+    font-size: inherit;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale
+}
+
+.fa-twitter:before {
+    content: "\f099"
+}
+
+.fa-github:before {
+    content: "\f09b"
+}
+
+.fa-stack-overflow:before {
+    content: "\f16c"
+}
+
+.fa-linkedin:before {
+    content: "\f0e1"
+}
+
