--- a/production/css/style.css
+++ b/production/css/style.css
@@ -31,6 +31,11 @@ body {
         justify-content: center;
 }
 
+.emphasis {
+    font-size: 180%;
+    /*text-align: wrap*/;
+}
+
 .jumbotron-text {
     width: 530px;
     color: black;
